tests/ui/parser/extern-crate-unexpected-token.rs
extern crte foo; //~ ERROR expected one of `crate` or `{`, found `crte`
